Tutorial-GRMHD_Equations-Cartesian: Add Brandon's reformatted version, but incorporating updates from Phil's latest version

--- a/Tutorial-GRMHD_Equations-Cartesian.ipynb
+++ b/Tutorial-GRMHD_Equations-Cartesian.ipynb
@@ -6,6 +6,9 @@
    "source": [
     "# GR HD Equations\n",
     "\n",
+    "## Author: Zach Etienne\n",
+    "### Formatting improvements courtesy Brandon Clark\n",
+    "\n",
     "$\\newcommand{\\be}{\\begin{equation}}$\n",
     "$\\newcommand{\\ee}{\\end{equation}}$\n",
     "$\\newcommand{\\grad}{{\\boldsymbol{\\nabla}}}$\n",
@@ -43,6 +46,7 @@
     "$\\newcommand{\\meshr}{{\\boldsymbol{r}}}$\n",
     "$\\newcommand{\\cmr}{{\\boldsymbol{c}}}$\n",
     "\n",
+    "## Introduction: \n",
     "We start out with the ** GRHD ** equations in conservative form with the state vector $\\state=(\\rhostar, \\Svectilde, \\tautilde)$:\n",
     "\\begin{equation}\n",
     "\\ddt{\\state} + \\grad\\cdot\\flux = \\source,\n",
@@ -65,7 +69,7 @@
     "\n",
     "Noting that the mass $\\flux$ is defined in terms of $\\rhostar$ and $\\vel$, we need to first find a mapping between $\\vel$ and $u$.  \n",
     "\n",
-    "## Alternative formulation\n",
+    "### Alternative formulation\n",
     "\n",
     "The Athena++ folks have an alternative formulations that might be superior.  \n",
     "Begin with the continuity equation\n",
@@ -117,9 +121,39 @@
     "\\partial_0 (\\rho h u^0 u_0 + + \\partial_j T^j_i = \\frac 1 2 \\partial_{0}g_{\\alpha \\delta} T^{\\alpha\\delta},\n",
     "\\end{equation}\n",
     "\n",
-    "However the disadvantage is that we need the time derivative of the metric.  \n",
+    "However the disadvantage is that we need the time derivative of the metric."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc'></a>\n",
     "\n",
-    "## Primitive to Conservative Mapping\n",
+    "# Table of Contents\n",
+    "$$\\label{toc}$$\n",
+    "\n",
+    "This module is organized as follows\n",
+    "\n",
+    "1. [Step 1](#mapping): Primitive to Conservative Mapping\n",
+    "1. [Step 2](#zach): Compute $u^0$ from the Valencia 3-velocity (Zach step)\n",
+    "1. [Step 3](#flux): Compute the flux\n",
+    "1. [Step 4](#source): Source Terms\n",
+    "1. [Step 5](#rotation): Rotation\n",
+    "1. [Step 6](#solver): Conservative to Primitive Solver\n",
+    "1. [Step 7](#lorentz): Lorentz Boosts\n",
+    "1. [Step 8](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='mapping'></a>\n",
+    "\n",
+    "# Step 1: Primitive to Conservative Mapping\n",
+    "$$\\label{mapping}$$\n",
+    "\n",
     "We want to make a mapping from the primitives to conserved variables:\n",
     "\\begin{equation}\n",
     "(\\rho, \\vel, \\epsilon) \\rightarrow (\\rhostar = \\lapse\\rho\\rtgamma u^0, \\Svectilde = \\rhostar h \\uvec, \\tautilde = \\lapse^2\\rtgamma \\T00 - \\rhostar).\n",
@@ -135,7 +169,7 @@
     "\\beta_j & \\gamma_{ij}\n",
     "\\end{pmatrix},\n",
     "\\end{equation}\n",
-    "Lets write some code to define metric contraction on four vectors in this context:\n"
+    "Lets write some code to define metric contraction on four vectors in this context:"
    ]
   },
   {
@@ -244,7 +278,7 @@
     "\n",
     "The other thing is $\\uvec = u^0\\vel$.  So then we can proceed and spit out the conservative variables: $\\rhostar, \\Svectilde$.\n",
     "\n",
-    "To get $\\tau$, we note that we have defined the metric as the covariant form, e.g., lower indices.  The upper form of $g^{\\mu\\nu}$ is found in B&S 2.119 and is given by\n",
+    "To get $\\tau$, we note that we have defined the metric as the covariant form, e.g., lower indices.  The upper form of $g^{\\mu\\nu}$ is found in [B&S]() 2.119 and is given by\n",
     "\\begin{equation}\n",
     "g^{\\mu\\nu} = \n",
     "\\begin{pmatrix}\n",
@@ -290,7 +324,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Zach step: Compute $u^0$ from the Valencia 3-velocity\n",
+    "<a id='zach'></a>\n",
+    "\n",
+    "# Step 2: Compute $u^0$ from the Valencia 3-velocity (Zach step)\n",
+    "$$\\label{zach}$$\n",
     "\n",
     "According to Eqs. 9-11 of [the IllinoisGRMHD paper](https://arxiv.org/pdf/1501.07276.pdf), the Valencia 3-velocity $v^i_{(n)}$ is related to the 4-velocity $u^\\mu$ via\n",
     "\n",
@@ -479,7 +516,6 @@
     }
    ],
    "source": [
-    "\n",
     "rho, epsilon, gamma1, p = sp.symbols(\"rho ie gamma p\")\n",
     "\n",
     "\n",
@@ -528,7 +564,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# compute the flux\n",
+    "<a id='flux'></a>\n",
+    "\n",
+    "# Step 3: Compute the flux\n",
+    "$$\\label{flux}$$\n",
+    "\n",
     "The fluxes are as follows\n",
     "\\begin{equation}\n",
     "\\frac{\\partial}{\\partial t} \n",
@@ -657,12 +697,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Source Terms\n",
+    "<a id='source'></a>\n",
+    "\n",
+    "# Step 4: Source Terms\n",
+    "$$\\label{source}$$\n",
     "\n",
     "The sources terms are for mass, momentum and energy are: \n",
     "\\begin{equation}\n",
-    "\\source = (0, \\frac 1 2 \\lapse\\rtgamma \\T{\\alpha}{\\beta}g_{\\alpha\\beta,i}, s)\n",
-    "\\end{equation},\n",
+    "\\source = (0, \\frac 1 2 \\lapse\\rtgamma \\T{\\alpha}{\\beta}g_{\\alpha\\beta,i}, s),\n",
+    "\\end{equation}\n",
     "For a time stationary metric $s = 0$, so we will ignore this for now.  As for the rest, we need to define derivatives of the metric.  Suppose I have done this already.  Then the code for the source terms is:\n"
    ]
   },
@@ -774,7 +817,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Rotation\n",
+    "<a id='rotation'></a>\n",
+    "\n",
+    "# Step 5: Rotation\n",
+    "$$\\label{rotation}$$\n",
     "\n",
     "One of the key ideas behind the moving-mesh idea is that we must rotate the vector to the appropriate direction such that the Riemann solve is along the x-direction.  This is done by computing the normal vector also the \"x-direction\" and two normal vectors orthogonal to it.  In MANGA they are labeled $n_0$, $n_1$, and $n_2$.  And the rotation matrix looks like\n",
     "\\begin{equation}\n",
@@ -919,7 +965,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Conservative to Primitive Solver\n",
+    "<a id='solver'></a>\n",
+    "\n",
+    "# Step 6: Conservative to Primitive Solver\n",
+    "$$\\label{solver}$$\n",
     "\n",
     "We now discuss the reverse mapping from conservative to primitive variables.\n",
     "Given the lapse, shift vector and $\\rtgamma$, the mapping between primitive and conserved variable is straightforward.  However, the reverse is not as simple.  In GRMHD, the conservative to primitive solver is amplified by the inclusion of the magnetic field, leading to rather sophisticated root finding strategies.  The failure rates of these algorithms are low (??), but since this algorithm may be executed several times per timestep for every gridpoint, even a low failure can give unacceptable collective failure rates.  However, for purely polytropic equations of state, e.g., $P\\propto\\rho^{\\Gamma_1}$, the convervative to primitive variable solver is greatly simplified.  \n",
@@ -936,7 +985,7 @@
     "\\end{equation}\n",
     "Noting that the four velocity $u^2 = g_{\\mu\\nu}u^{\\mu}u^{\\nu} = g^{00}u^0u^0 + 2g^{0i}u^0\\uvec^i + g_{ij}\\uvec^i\\uvec^j = -1$, we have\n",
     "\\begin{equation}\n",
-    " 0 = f(\\rho)\\equiv \\rhostar^2h^2 + \\left(-\\lapse^2 + \\shift\\cdot\\shift\\right)\\rhostar^2h^2 (u^0)^2 + 2\\rhostar h u^0\\shift^i\\Svectilde_i + \\gamma^{ij}\\Svectilde_i\\Svectilde_j,\n",
+    " 0 = f(\\rho)\\equiv \\alpha^2\\gamma\\rho^2h^2 + \\left(-\\lapse^2 + \\shift\\cdot\\shift\\right)\\rhostar^2h^2 + 2h\\rhostar\\shift\\cdot\\Svectilde + \\Svectilde\\cdot\\Svectilde,\n",
     "\\end{equation}\n",
     "which is an implicit equation of either $\\rho$ or $u^0$, where $h(\\rho = \\rhostar/(\\alpha\\rtgamma u^0)) = 1 + \\gamma_1 \\epsilon$ which can be inverted by standard nonlinear root finding algorithms, e.g., Newton-raphson. \n",
     "\n",
@@ -1010,7 +1059,7 @@
     "f = rhostar**2*h**2 + (-lapse2 + beta2)*rhostar**2.*h**2.*uU0**2 + 2.*h*rhostar*betaDotStilde*uU0 + Stilde2\n",
     "\n",
     "outputC(f,\"rootRho\",filename=\"NRPY+rhoRoot.h\")\n",
-    "outputC(Stilde2, \"Stilde2\", filename=\"NRPY+Stilde2.h\")\n"
+    "outputC(Stilde2, \"Stilde2\", filename=\"NRPY+Stilde2.h\")"
    ]
   },
   {
@@ -1063,7 +1112,10 @@
     "collapsed": true
    },
    "source": [
-    "## Lorentz Boosts\n",
+    "<a id='lorentz'></a>\n",
+    "\n",
+    "# Step 7: Lorentz Boosts\n",
+    "$$\\label{lorentz}$$\n",
     "\n",
     "We need to boost to the frame of the moving face.  The boost is\n",
     "\\begin{equation}\n",
@@ -1080,11 +1132,48 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<a id='latex_pdf_output'></a>\n",
+    "\n",
+    "# Step 8: Output this module to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
+    "$$\\label{latex_pdf_output}$$\n",
+    "\n",
+    "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
+    "[Tutorial-GRMHD_Equations-Cartesian.pdf](Tutorial-GRMHD_Equations-Cartesian.pdf) (Note that clicking on this link may not work; you may need to open the PDF file through another means.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook Tutorial-GRMHD_Equations-Cartesian.ipynb to latex\n",
+      "[NbConvertApp] Writing 103119 bytes to Tutorial-GRMHD_Equations-Cartesian.tex\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n"
+     ]
+    }
+   ],
+   "source": [
+    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx Tutorial-GRMHD_Equations-Cartesian.ipynb\n",
+    "!pdflatex -interaction=batchmode Tutorial-GRMHD_Equations-Cartesian.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-GRMHD_Equations-Cartesian.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-GRMHD_Equations-Cartesian.tex\n",
+    "!rm -f Tut*.out Tut*.aux Tut*.log"
+   ]
   }
  ],
  "metadata": {
