Improved the discussion a bit further

--- a/IllinoisGRMHD/doc/Overview.ipynb
+++ b/IllinoisGRMHD/doc/Overview.ipynb
@@ -14,14 +14,14 @@
     "\n",
     "## Introduction:\n",
     "\n",
-    "[IllinoisGRMHD](http://arxiv.org/abs/1501.07276) solves the equations of General Relativistic MagnetoHydroDynamics (GRMHD) using a high-resolution shock capturing scheme. It is a rewrite of the Illinois Numerical Relativity (ILNR) group's GRMHD code, and generates results that agree to roundoff error with that original code. Its feature set coincides with the features of the ILNR group's recent code (ca. 2009$-$2014), which was used in their modeling of the following systems:\n",
+    "[`IllinoisGRMHD`](http://arxiv.org/abs/1501.07276) solves the equations of General Relativistic MagnetoHydroDynamics (GRMHD) using a high-resolution shock capturing scheme. It is a rewrite of the Illinois Numerical Relativity (ILNR) group's GRMHD code, and generates results that agree to roundoff error with that original code. Its feature set coincides with the features of the ILNR group's recent code (ca. 2009-2014), which was used in their modeling of the following systems:\n",
     "\n",
     "1. Magnetized circumbinary disk accretion onto binary black holes\n",
-    "2. Magnetized black hole$-$neutron star mergers\n",
+    "2. Magnetized black hole-neutron star mergers\n",
     "3. Magnetized Bondi flow, Bondi-Hoyle-Littleton accretion\n",
-    "4. White dwarf$-$neutron star mergers\n",
+    "4. White dwarf-neutron star mergers\n",
     "\n",
-    "IllinoisGRMHD is particularly good at modeling GRMHD flows into black holes without the need for excision. Its [HARM-based conservative-to-primitive solver](https://arxiv.org/abs/astro-ph/0512420) has also been modified to check the physicality of conservative variables prior to primitive inversion, and move them into the physical range if they become unphysical.\n",
+    "`IllinoisGRMHD` is particularly good at modeling GRMHD flows into black holes without the need for excision. Its [HARM-based conservative-to-primitive solver](https://arxiv.org/abs/astro-ph/0512420) has also been modified to check the physicality of conservative variables prior to primitive inversion, and move them into the physical range if they become unphysical.\n",
     "\n",
     "Currently IllinoisGRMHD consists of\n",
     "\n",
@@ -29,7 +29,7 @@
     "2. the Harten, Lax, van Leer (HLL/HLLE) approximate Riemann solver, and\n",
     "3. a modified HARM Conservative-to-Primitive solver. \n",
     "\n",
-    "IllinoisGRMHD evolves the vector potential $A_{\\mu}$ (on staggered grids) instead of the magnetic fields ($B^i$) irectly, to guarantee that the magnetic fields will remain divergenceless even at AMR boundaries. On uniform resolution rids, this vector potential formulation produces results equivalent to those generated using the standard, staggered flux-CT scheme. This scheme is based on that of [Del Zanna *et al.* (2003)](https://arxiv.org/abs/astro-ph/0210618).\n",
+    "`IllinoisGRMHD` evolves the vector potential $A_{\\mu}$ (on staggered grids) instead of the magnetic fields ($B^i$) irectly, to guarantee that the magnetic fields will remain divergenceless even at AMR boundaries. On uniform resolution rids, this vector potential formulation produces results equivalent to those generated using the standard, staggered flux-CT scheme. This scheme is based on that of [Del Zanna *et al.* (2003)](https://arxiv.org/abs/astro-ph/0210618).\n",
     "\n",
     "### Required and recommended citations:\n",
     "* **(Required)** Etienne, Z. B., Paschalidis, V., Haas R., Mösta P., and Shapiro, S. L. IllinoisGRMHD: an open-source, user-friendly GRMHD code for dynamical spacetimes. Class. Quantum Grav. 32 (2015) 175009. ([arxiv:1501.07276](http://arxiv.org/abs/1501.07276)).\n",
@@ -80,6 +80,13 @@
     "# Step 2: Recasting the equations of GRMHD into a more useful form \\[Back to [top](#toc)\\]\n",
     "$$\\label{suitable_equations}$$\n",
     "\n",
+    "In this step we will write down the equations used by `IllinoisGRMHD` in the form they are implemented. To give an example, the GRMHD equations are written in the *conservative form*\n",
+    "\n",
+    "$$\n",
+    "\\partial_{t}\\boldsymbol{C} + \\boldsymbol{\\nabla}\\cdot\\boldsymbol{F} = \\boldsymbol{S}\\ ,\n",
+    "$$\n",
+    "\n",
+    "where $\\boldsymbol{C} = \\left\\{\\rho_{\\star},\\tilde\\tau,\\tilde{S}_{i},\\tilde{B}^{i}\\right\\}$ is the vector of conservative variables, $\\boldsymbol{F}$ is the flux vector, and $\\boldsymbol{S}$ the vector of source terms (explict expressions for the components of $\\boldsymbol{C}$, $\\boldsymbol{F}$, and $\\boldsymbol{S}$ can be found below).\n",
     "\n",
     "<a id='einstein_equations'></a>\n",
     "\n",
@@ -98,29 +105,59 @@
     "T^{\\mu\\nu} = T^{\\mu\\nu}_{\\rm matter} + T^{\\mu\\nu}_{\\rm EM}\\ .\n",
     "$$\n",
     "\n",
-    "Einstein's field equations are solved using the BSSN formalism (see [this tutorial module](../../Tutorial-BSSN_formulation.ipynb) for a great overview).\n",
+    "Einstein's field equations are solved using the BSSN formalism (see [this tutorial module](../../Tutorial-BSSN_formulation.ipynb) for an overview).\n",
     "\n",
     "<a id='conserv_of_baryon_number'></a>\n",
     "\n",
     "## Step 2.2: Conservation of baryon number \\[Back to [top](#toc)\\]\n",
     "$$\\label{conserv_of_baryon_number}$$\n",
     "\n",
-    "We are also interested in the conservation of baryon number\n",
+    "The conservation of baryon number equation is written as (cf. eqs. (6), (7), and (18) in [Etienne *et al.*](https://arxiv.org/pdf/1501.07276.pdf))\n",
     "\n",
     "$$\n",
-    "\\nabla_{\\mu}\\left(\\rho_{0} u^{\\mu}\\right) = 0\\ ,\n",
+    "\\boxed{\\partial_{t}\\rho_{\\star} + \\partial_{j}\\left(\\rho_{\\star}v^{j}\\right) = 0}\\ ,\n",
     "$$\n",
     "\n",
-    "where $\\nabla_{\\mu}$ is the covariant derivative associated with the 4-metric $g_{\\mu\\nu}$, $\\rho_{0}$ is fluid rest-mass, and $u^{\\mu}$ is the fluid 4-velocity.\n",
+    "where $\\rho_{\\star}\\equiv \\alpha \\sqrt{\\gamma}\\rho_{0}u^{0}$ and $v^{i}\\equiv u^{i}/u^{0}$.\n",
     "\n",
     "<a id='conserv_of_em_tensor'></a>\n",
     "\n",
     "## Step 2.3: Conservation of energy-momentum \\[Back to [top](#toc)\\]\n",
     "$$\\label{conserv_of_em_tensor}$$\n",
     "\n",
+    "In the ideal MHD limit, we can write down the total energy momentum tensor as (cf. eq. (8) in [Etienne *et al.*](https://arxiv.org/pdf/1501.07276.pdf) and the discussion before it)\n",
+    "\n",
     "$$\n",
-    "\\nabla_{\\mu}T^{\\mu\\nu} = \\nabla_{\\mu}\\left(T^{\\mu\\nu}_{\\rm matter} + T^{\\mu\\nu}_{\\rm EM}\\right) = 0\\ .\n",
+    "T^{\\mu \\nu} = (\\rho_0 h +b^2) u^{\\mu} u^{\\nu} + \\left( P + \\frac{b^2}{2}\\ .\n",
+    "\\right) g^{\\mu \\nu} - b^{\\mu} b^{\\nu}\n",
     "$$\n",
+    "\n",
+    "The spatial components of the energy-momentum conservation equation give (cf. eq. (18) of https://arxiv.org/pdf/astro-ph/0503420.pdf and eqs. (35) and (36) of [Duez et al.](https://arxiv.org/pdf/astro-ph/0503420.pdf))\n",
+    "\n",
+    "$$\n",
+    "\\boxed{\\partial_{t}\\tilde{S}_{i} + \\partial_{j}\\left(\\alpha\\sqrt{\\gamma} T^{j}_{\\ i}\\right) = \\frac{1}{2}\\sqrt{\\gamma} T^{\\alpha\\beta}\\partial_{i}g_{\\alpha\\beta}}\\ ,\n",
+    "$$\n",
+    "\n",
+    "where\n",
+    "\n",
+    "$$\n",
+    "\\tilde{S}_{i} = \\sqrt{\\gamma}S_{i} = \\alpha \\sqrt{\\gamma} T^{0}_{\\ i} = \\left(\\rho_{\\star}h + \\alpha u^{0}\\sqrt{\\gamma}b^{2}\\right)u_{i} - \\alpha \\sqrt{\\gamma} b^{0} b^{i}\\ .\n",
+    "$$\n",
+    "\n",
+    "The time component of the energy-momentum conservation equation gives (cf. eq. (18) of [Etienne *et al.*](https://arxiv.org/pdf/1501.07276.pdf))\n",
+    "\n",
+    "$$\n",
+    "\\boxed{\\partial_{t}\\tilde{\\tau} + \\partial_{i}\\left(\\alpha^{2}\\sqrt{\\gamma}T^{0i} - \\rho_{\\star}v^{i}\\right) = s}\\ ,\n",
+    "$$\n",
+    "\n",
+    "where\n",
+    "\n",
+    "\\begin{align}\n",
+    "\\tilde{\\tau} &= \\sqrt{\\gamma}n_{\\mu}n_{\\nu} - \\rho_{\\star} = \\alpha^{2}\\sqrt{\\gamma}T^{00} - \\rho_{\\star}\\ ,\\\\\n",
+    "s &= -\\alpha \\sqrt{\\gamma} T^{\\mu\\nu} \\nabla_{\\nu} n_{\\mu} = \\alpha\\sqrt{\\gamma}\\left[\\left(T^{00}\\beta^{i}\\beta^{j} + 2T^{0i}\\beta^{j} + T^{ij}\\right)K_{ij} - \\left(T^{00}\\beta^{i} + T^{0i}\\right)\\partial_{i}\\alpha\\right]\\ ,\n",
+    "\\end{align}\n",
+    "\n",
+    "with $n_{\\mu} = \\left(\\alpha,0,0,0\\right)$ being the normal vector and $K_{ij}$ the extrinsic curvature.\n",
     "\n",
     "<a id='maxwell_equations'></a>\n",
     "\n",
@@ -131,6 +168,27 @@
     "\n",
     "$$\n",
     "\\nabla_{\\nu} F^{*\\mu\\nu}=\\frac{1}{\\sqrt{-g}}\\partial_{\\nu}\\left(\\sqrt{-g}F^{*\\mu\\nu}\\right)=0\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\boldsymbol{C} =\n",
+    "\\left[\n",
+    "  \\begin{array}{c}\n",
+    "    \\rho_{\\star} \\\\\n",
+    "    \\tilde{\\tau} \\\\\n",
+    "    \\tilde{S_i} \\\\\n",
+    "    \\tilde{B^i} \n",
+    "  \\end{array}\n",
+    "\\right]\n",
+    "  = \n",
+    "\\left[\n",
+    "  \\begin{array}{c}\n",
+    "    \\alpha \\sqrt{\\gamma} \\rho_0 u^0 \\\\\n",
+    "    \\alpha^2 \\sqrt{\\gamma} T^{00} - \\rho_{\\star}\\\\\n",
+    "    (\\rho_\\star h + \\alpha u^0 \\sqrt{\\gamma} b^2) u_i - \\alpha \\sqrt{\\gamma} b^0 b_i \\\\\n",
+    "    \\sqrt{\\gamma} B^i\n",
+    "  \\end{array}\n",
+    "\\right]\\ ,\n",
     "$$"
    ]
   },
