Same changes as previous commit. Name change disrupted the latest changes

--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD_Overview.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD_Overview.ipynb
@@ -54,8 +54,13 @@
     "    1. [Step 2.2](#conserv_of_baryon_number): Conservation of baryon number\n",
     "    1. [Step 2.3](#conserv_of_em_tensor): Conservation of energy-momentum\n",
     "    1. [Step 2.4](#em_evo_equations): The evolution equations for the electromagnetic field\n",
-    "1. [Step 3](#)\n",
-    "\n",
+    "1. [Step 3](#latex_pdf_output): **Output this module to $\\LaTeX$-formatted PDF file**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id='basic_equations'></a>\n",
     "\n",
     "# Step 1: The equations of GRMHD \\[Back to [top](#toc)\\]\n",
@@ -221,8 +226,39 @@
    "source": [
     "<a id='latex_pdf_output'></a>\n",
     "\n",
-    "# Step 2: Output this module to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
+    "# Step 3: Output this module to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
     "$$\\label{latex_pdf_output}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook Tutorial-IllinoisGRMHD_Overview.ipynb to latex\n",
+      "[NbConvertApp] Writing 36413 bytes to Tutorial-IllinoisGRMHD_Overview.tex\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n"
+     ]
+    }
+   ],
+   "source": [
+    "!jupyter nbconvert --to latex --template ../../latex_nrpy_style.tplx Tutorial-IllinoisGRMHD_Overview.ipynb\n",
+    "!pdflatex -interaction=batchmode Tutorial-IllinoisGRMHD_Overview.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-IllinoisGRMHD_Overview.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-IllinoisGRMHD_Overview.tex\n",
+    "!rm -f Tut*.out Tut*.aux Tut*.log"
    ]
   },
   {
