Further documentation of PPM.

--- a/Tutorial-GiRaFFE_HO_Ccode_library-PPM.ipynb
+++ b/Tutorial-GiRaFFE_HO_Ccode_library-PPM.ipynb
@@ -690,7 +690,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In Loop 1, we will interpolate the face values at the left and right interfaces, `Ur` and `Ul`. This is done on a point-by-point basis as defined by the `LOOP_DEFINE`. \n",
+    "In Loop 1, we will interpolate the face values at the left and right interfaces, `Ur` and `Ul`, respectively. This is done on a point-by-point basis as defined by the `LOOP_DEFINE`. \n",
     "\n",
     "After reading in the relevant values from memory, we calculate thesimple `dU`:\n",
     "\\begin{align}\n",
@@ -766,7 +766,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "We skip Loop 2 in GRFFE; then, we flatten the data in Loop 3 (but since we flattenbased on `ftilde_gf`, which is 0 in GRFFE, we again don't really do anything). Also in Loop 3, we call the `monotonize()` function on the face values. This function adjusts the face values to ensure that the data is monotonic within each cell to avoid the Gibbs phenomenon."
+   ]
   },
   {
    "cell_type": "code",
@@ -908,7 +910,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The next function monotonizes the slopes. We want the slope to be monotonic in a cell in order to reduce the impact of the Gibbs phenomenon. So, we consider three values in the cell: at the center, `U`; on the right interface, `Ur`; and on the left interface, `Ul`"
+    "The next function monotonizes the slopes using the algorithm from [Colella and Woodward (1984)](https://crd.lbl.gov/assets/pubs_presos/AMCS/ANAG/A141984.pdf), eq. 1.10. We want the slope to be monotonic in a cell in order to reduce the impact of the Gibbs phenomenon. So, we consider three values in the cell: the cell average, `U`; on the right interface of the cell, `Ul`; and on the left interface of the cell, `Ur`. We first define the change across the cell, `dU = Ur - Ul`, and the mean value in the cell, `mU = 0.5*(Ur+Ul)`. Then, if the slope changes in the cell (calculated as `(Ur-U)*(U-Ul) <= 0.0`), we set both interface values to the cell average - if the cell holds a local maximum or minimum, we make the interpolation function a constant. We must then also consider the case where `U` is \"close\" to `Ur` or `Ul`, and an interpolating polynomial between them would not be monotonic over the cell."
    ]
   },
   {
