SEOBNR: update coefficients and their documentation.

--- a/Tutorial-SEOBNR_Initial_Conditions.ipynb
+++ b/Tutorial-SEOBNR_Initial_Conditions.ipynb
@@ -81,6 +81,7 @@
     "    file.write(\"\")\n",
     "\n",
     "# Input variables: will eventually structure this module as a function with the following input parameters\n",
+    "# m1, m2 given in solar masses, f in Hz, and spin in \n",
     "m1 = 15.\n",
     "m2 = 10.\n",
     "f = 20.\n",
@@ -97,7 +98,13 @@
     "# Euler–Mascheroni constant $\\gamma$\n",
     "gamma = 0.577215664901532860606512090082402431\n",
     "# Geomtrized solar mass $\\mathcal{M}_{\\odot}$\n",
-    "Msol = 4.925491025543575903411922162094833998e-6"
+    "Msol = 4.925491025543575903411922162094833998e-6\n",
+    "# Solar mass in kg\n",
+    "#MsolSI = 1.98892e30\n",
+    "\n",
+    "#Convert the spins to dimensionless quantities\n",
+    "S1 *= m1*m1\n",
+    "S2 *= m2*m2"
    ]
   },
   {
@@ -400,7 +407,7 @@
     "## Step 2.c: ${\\bf S}_{\\rm Kerr}$ \\[Back to [top](#toc)\\]\n",
     "$$\\label{skerr}$$\n",
     "\n",
-    "From [BB2010](https://arxiv.org/abs/0912.3517) Equations (5.2), (5.63), and (5.67) we have\n",
+    "From [BB2010](https://arxiv.org/abs/0912.3517) Equations (5.2), (5.64), and (5.67) we have\n",
     "\n",
     "\\begin{equation*}\n",
     "    {\\bf S}_{\\rm Kerr} = {\\bf S}_{1} + {\\bf S}_{2}.\n",
@@ -425,9 +432,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convert the separation vector from Cartesian to spherical coordinates\n",
+    "# Compute S_Kerr, the spin of the deformed Kerr background\n",
+    "# See https://arxiv.org/abs/0912.3517 Equations (5.2), (5.64), and (5.67)\n",
     "SKerr = np.add(S1, S2)\n",
-    "asq = np.dot(SKerr,SKerr)*Msqinv\n",
+    "\n",
+    "# Normalize S_Kerr by total mass\n",
+    "SKerr *= Msqinv\n",
+    "\n",
+    "# Compute a, which is a parameter in metric potentials of a Kerr spacetime\n",
+    "# See https://arxiv.org/abs/0912.3517 Equation (4.9)\n",
+    "asq = np.dot(SKerr,SKerr)\n",
     "a = np.sqrt(asq)"
    ]
   },
@@ -482,48 +496,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a = 2.622975409720800e-03\n",
+      "a = 1.010346475225207e-02\n",
       "\n",
-      "KK = 4.143334255972881e-01, k0 = -7.874655261784522e-01, k1 = -6.720556724739575e-01, k2 = -9.846190757404837e-01, k3 = 2.047561620390203e-01, k4 = 1.499360363944979e+01, k5 = -7.129366404491681e+01, k5l = 1.038090590357980e+01, d1 = -6.950000000000000e+01, d1v2 = -7.600600000000000e+01, dheffSS = 2.750000000000000e+00, dheffSSv2 = 1.897308000000000e+01\n",
+      "eta = 2.400000000000000e-01\n",
       "\n",
-      "[ 1.00007096 -0.00177108 -0.00774849]\n",
-      "[25.56350467  0.19778338  0.2       ]\n",
-      "[ 1.00007096 -0.00177108 -0.00774849]\n",
-      "[25.56350467  0.19778338  0.2       ]\n",
-      "[ 1.00007096 -0.00177108 -0.00774849]\n",
-      "[25.56350467  0.19778338  0.2       ]\n",
-      "[ 1.00007096 -0.00177108 -0.00774849]\n",
-      "[25.56350505  0.19778338  0.2       ]\n",
-      "[ 1.00007096 -0.00177108 -0.00774849]\n",
-      "[25.56350467  0.19778339  0.2       ]\n",
-      "[ 1.00007096 -0.00177108 -0.00774849]\n",
-      "[25.56350467  0.19778338  0.2       ]\n",
-      "[ 8.74541974e+00  6.29901084e-04 -7.73591175e-03]\n",
-      "[858.7834412    5.42355059 -34.76843485]\n",
-      "[nan nan nan]\n",
-      "[993.11849063   9.08831493  13.36394845]\n",
-      "[ 1.00007096 -0.00177108 -0.00774849]\n",
-      "[25.56350505  0.19778338  0.2       ]\n",
-      "[ 1.00007096 -0.00177108 -0.00774849]\n",
-      "[25.56350467  0.19778339  0.2       ]\n",
-      "[ 1.00007096 -0.00177108 -0.00774849]\n",
-      "[25.56350467  0.19778338  0.2       ]\n",
-      "[ 8.74541974e+00  6.29901084e-04 -7.73591175e-03]\n",
-      "[858.7834412    5.42355059 -34.76843485]\n",
-      "[nan nan nan]\n",
-      "[993.11849063   9.08831493  13.36394845]\n",
-      "[nan nan nan]\n",
-      "[nan nan nan]\n",
-      "[nan nan nan]\n",
-      "[nan nan nan]\n",
-      "[nan nan nan]\n",
-      "[nan nan nan]\n",
-      "[nan nan nan]\n",
-      "[nan nan nan]\n",
-      "[nan nan nan]\n",
-      "[nan nan nan]\n",
-      "[nan nan nan]\n",
-      "[nan nan nan]\n"
+      "KK = 4.143334255972881e-01, k0 = -7.874655261784522e-01, k1 = -6.720556724739575e-01, k2 = -9.845582771118575e-01, k3 = 2.048766956651378e-01, k4 = 1.499382508123745e+01, k5 = 3.515621287843668e+01, k5l = 1.038090590357980e+01, d1 = 0.000000000000000e+00, d1v2 = -7.600600000000000e+01, dheffSS = 0.000000000000000e+00, dheffSSv2 = 1.897308000000000e+01\n",
+      "\n",
+      "False\n",
+      "The iteration is not making good progress, as measured by the \n",
+      "  improvement from the last ten iterations.\n"
      ]
     },
     {
@@ -546,7 +527,12 @@
     "from SEOBNR_Playground_Pycodes.numpy_expressions import compute_dHdq\n",
     "from SEOBNR.constant_coeffs import compute_const_coeffs\n",
     "\n",
+    "print(\"a = %.15e\\n\" % a)\n",
+    "print(\"eta = %.15e\\n\" % eta)\n",
+    "\n",
     "KK, k0, k1, k2, k3, k4, k5, k5l, d1, d1v2, dheffSS, dheffSSv2 = compute_const_coeffs(eta,gamma,a)\n",
+    "\n",
+    "print(\"KK = %.15e, k0 = %.15e, k1 = %.15e, k2 = %.15e, k3 = %.15e, k4 = %.15e, k5 = %.15e, k5l = %.15e, d1 = %.15e, d1v2 = %.15e, dheffSS = %.15e, dheffSSv2 = %.15e\\n\" % (KK, k0, k1, k2, k3, k4, k5, k5l, d1, d1v2, dheffSS, dheffSSv2))\n",
     "\n",
     "# Define the function of which we want to find the roots\n",
     "def root_func(F):\n",
@@ -561,9 +547,8 @@
     "\n",
     "# Find the roots of root_func\n",
     "soln = root(root_func, root_guess, args=(), method='hybr', jac=None, tol=None, callback=None)\n",
-    "#print(\"v = %.15e\\n\" % v)\n",
-    "#print(soln.success)\n",
-    "#print(soln.message)\n",
+    "print(soln.success)\n",
+    "print(soln.message)\n",
     "\n",
     "# Populate separation (q) and momentum (p) vectors with the results of root() \n",
     "q = np.array([soln.x[0], 0., 0.])\n",
