Added EOS discussion. Added subsection to ToC. LaTeX working fine. All links working fine.

--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD_Overview.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD_Overview.ipynb
@@ -29,7 +29,7 @@
     "2. the Harten, Lax, van Leer (HLL/HLLE) approximate Riemann solver, and\n",
     "3. a modified HARM Conservative-to-Primitive solver. \n",
     "\n",
-    "`IllinoisGRMHD` evolves the vector potential $A_{\\mu}$ (on staggered grids) instead of the magnetic fields ($B^i$) irectly, to guarantee that the magnetic fields will remain divergenceless even at AMR boundaries. On uniform resolution rids, this vector potential formulation produces results equivalent to those generated using the standard, staggered flux-CT scheme. This scheme is based on that of [Del Zanna *et al.* (2003)](https://arxiv.org/abs/astro-ph/0210618).\n",
+    "`IllinoisGRMHD` evolves the vector potential $A_{\\mu}$ (on staggered grids) instead of the magnetic fields ($B^i$) directly, to guarantee that the magnetic fields will remain divergenceless even at AMR boundaries. On uniform resolution grids, this vector potential formulation produces results equivalent to those generated using the standard, staggered flux-CT scheme. This scheme is based on that of [Del Zanna *et al.* (2003)](https://arxiv.org/abs/astro-ph/0210618).\n",
     "\n",
     "### Required and recommended citations:\n",
     "* **(Required)** Etienne, Z. B., Paschalidis, V., Haas R., Mösta P., and Shapiro, S. L. IllinoisGRMHD: an open-source, user-friendly GRMHD code for dynamical spacetimes. Class. Quantum Grav. 32 (2015) 175009. ([arxiv:1501.07276](http://arxiv.org/abs/1501.07276)).\n",
@@ -54,6 +54,7 @@
     "    1. [Step 2.2](#conserv_of_baryon_number): Conservation of baryon number\n",
     "    1. [Step 2.3](#conserv_of_em_tensor): Conservation of energy-momentum\n",
     "    1. [Step 2.4](#em_evo_equations): The evolution equations for the electromagnetic field\n",
+    "    1. [Step 2.5](#equation_of_state): The equation of state (EOS)\n",
     "1. [Step 3](#latex_pdf_output): **Output this module to $\\LaTeX$-formatted PDF file**"
    ]
   },
@@ -211,13 +212,34 @@
     "\\nabla_{\\mu}\\mathcal{A}^{\\mu} = \\xi n_{\\mu} \\mathcal{A}^{\\mu}\\ ,\n",
     "$$\n",
     "\n",
-    "where $\\xi$ is a parameter with dimensions 1/Length, chosen so that the CFL factor remains satisfied. This gauge choice yields the additional evolution equation\n",
+    "where $\\xi$ is a parameter with dimensions 1/Length, chosen so that the CFL condition remains satisfied. This gauge choice yields the additional evolution equation\n",
     "\n",
     "$$\n",
     "\\boxed{\\partial_t [\\sqrt{\\gamma} \\Phi] + \\partial_j (\\alpha \\sqrt{\\gamma} A^j - \\beta^j [\\sqrt{\\gamma}\\Phi]) = -\\xi\\alpha \\sqrt{\\gamma}\\Phi}\\ .\n",
     "$$\n",
     "\n",
-    "Note that in `IllinoisGRMHD` the evolved variable is $\\sqrt{\\gamma}\\Phi$, not $\\Phi$."
+    "Note that in `IllinoisGRMHD` the evolved variable is $\\sqrt{\\gamma}\\Phi$, not $\\Phi$.\n",
+    "\n",
+    "<a id='equation_of_state'></a>\n",
+    "\n",
+    "## Step 2.5: The equation of state (EOS) \\[Back to [top](#toc)\\]\n",
+    "$$\\label{equation_of_state}$$\n",
+    "\n",
+    "`IllinoisGRMHD` currently implements a hybrid EOS of the form\n",
+    "\n",
+    "$$\n",
+    "\\boxed{P(\\rho_{0},\\epsilon) = P_{\\rm cold}(\\rho_{0}) + \\left(\\Gamma_{\\rm th}-1\\right) \\rho_{0} \\left[\\epsilon-\\epsilon_{\\rm cold}(\\rho_{0})\\right]}\\ .\n",
+    "$$\n",
+    "\n",
+    "The function $\\epsilon_{\\rm cold}$ is related to $P_{\\rm cold}$ by the fist law of thermodynamics,\n",
+    "\n",
+    "$$\n",
+    "\\epsilon_{\\rm cold}(\\rho_{0}) = \\int \\frac{P_{\\rm cold}(\\rho_{0})}{\\rho_{0}^{2}}d\\rho_{0}\\ .\n",
+    "$$\n",
+    "\n",
+    "Currently, all functions within `IllinoisGRMHD` support piecewise-defined $P_{\\rm cold}(\\rho_{0})$ (the so-called \"piecewise polytrope\" EOS) with up to nine different polytropic indices, except for the conservatives-to-primitives solver, which currently supports only one.\n",
+    "\n",
+    "In typical runs of the code, particularly on the ones presented in the [release paper](https://arxiv.org/pdf/1501.07276.pdf), the $\\Gamma$-law EOS, $P = (\\Gamma - 1)\\rho_{0}\\epsilon$, is adopted. This corresponds to setting $P_{\\rm cold} = (\\Gamma - 1)\\rho_{0}\\epsilon_{\\rm cold}$ in the boxed equation above, which is equivalent to $P_{\\rm cold} = \\kappa\\rho_{0}^{\\Gamma}$ (with constant $\\kappa$), and $\\Gamma_{\\rm th} = \\Gamma$. In the absence of shocks, $\\epsilon = \\epsilon_{\\rm cold}$ so that $P = P_{\\rm cold}$."
    ]
   },
   {
@@ -232,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +262,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-IllinoisGRMHD_Overview.ipynb to latex\n",
-      "[NbConvertApp] Writing 36413 bytes to Tutorial-IllinoisGRMHD_Overview.tex\n",
+      "[NbConvertApp] Writing 37987 bytes to Tutorial-IllinoisGRMHD_Overview.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
